--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.wanghuan</groupId>
-	<artifactId>wh-spring-boot</artifactId>
+	<groupId>com.youareright</groupId>
+	<artifactId>youareright-spring-boot</artifactId>
 	<version>1.0.2-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<name>wh-spring-boot</name>
+	<name>youareright-spring-boot</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
