--- a/pom.xml
+++ b/pom.xml
@@ -79,9 +79,9 @@
 			<version>2.4.0-b180830.0438</version>
 		</dependency>
 		<dependency>
-			<groupId>javax.activation</groupId>
-			<artifactId>activation</artifactId>
-			<version>1.1.1</version>
+		    <groupId>com.sun.activation</groupId>
+		    <artifactId>javax.activation</artifactId>
+		    <version>1.2.0</version>
 		</dependency>
 	</dependencies>
 
