--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,16 @@
 
 	<groupId>com.youareright</groupId>
 	<artifactId>youareright-spring-boot</artifactId>
-	<version>1.1.2-SNAPSHOT</version>
+	<version>1.2.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<name>youareright-spring-boot</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Youareright project for Spring Boot</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.1.RELEASE</version>
+		<version>2.2.2.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
